--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,13 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": ">=7.2",
+        "php": ">=7.4",
         "cakephp/cakephp": "~4.2.0",
         "cakephp/migrations": "^3.0",
         "cakephp/plugin-installer": "^1.3",
         "cnizzardini/cakephp-swagger-bake": "^1.7",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "ext-json": "*"
     },
     "require-dev": {
         "cakephp/bake": "^2.3",
